--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    {{ _('hello gettext') }}
     %% block content
         <p>templates should extend this base and override this block. If you ever read this, it means that some developer is <del>incompetent</del> <del>an idiot</del> <del>lazy</del> silly. <small style="font-size:0.75em;font-style:italic;opacity:0.75">--phil</small></p>
     %% endblock
