--- a/static/stylesheets/sass/main.sass
+++ b/static/stylesheets/sass/main.sass
@@ -9,9 +9,9 @@
   +background-clip(padding-box)
 html, body
   height: 100%
-  
+
 @import "variables"
-//@import "typography"
+@import "typography"
 
 @import "global"
 @import "devices"
