--- a/static/stylesheets/sass/_typography.sass
+++ b/static/stylesheets/sass/_typography.sass
@@ -1,3 +1,12 @@
+$base-font-size: 18px
+$base-line-height: $base-font-size * 1.5
+$rhythm-unit: 'rem'
++establish-baseline
+
+html
+  font-family: 'Open Sans', Verdana, Helvetica, sans-serif
+  color: #343433
+
 ////////////////
 // @font-face //
 ////////////////
