--- a/templates/splash.html
+++ b/templates/splash.html
@@ -4,19 +4,19 @@
 
   <header>
     <div class="top">
-      <img src="{{ url_for('static', filename='img/logo-ewb-top.png') }}" alt="Engineers Without Borders Canada" />
-      <img src="{{ url_for('static', filename='img/logo-hatch-top.png') }}" alt="Hatch" />
-      <a href="#">{{ _("Français") }}</a>
+      <img src="{{ url_for('static', filename='img/logo-ewb-top.png') }}" alt="{{ _('Engineers Without Borders Canada') }}" />
+      <img src="{{ url_for('static', filename='img/logo-hatch-top.png') }}" alt="{{ _('Hatch') }}" />
+      <a href="{{ url_for('splash', lang=('en' if lang == 'fr' else 'fr')) }}">{{ _("Français") }}</a>
     </div>
 
     <div class="info">
-      <img src="{{ url_for('static', filename='img/logo-rethink-top.png') }}" alt="Rethink" />
+      <img src="{{ url_for('static', filename='img/logo-rethink-top.png') }}" alt="{{ _('Rethink') }}" />
       <h2 class='fulljust'>{{ _("January 9th to 12th | Toronto, Ontario") }}</h2>
       <p>{{ _("Leadership, Entrepreneurship, and Partnership for Global Development") }}</p>
     </div>
 
     <div class="buddies">
-      <img src="{{ url_for('static', filename='img/logo-buddies-top.png') }}" alt="NC14 Logo" />
+      <img src="{{ url_for('static', filename='img/logo-buddies-top.png') }}" alt="{{ _('National Conference 2014 Logo') }}" />
     </div>
   </header>
 
@@ -24,7 +24,7 @@
     <div class="overlay">
       <div class="maininner">
         <p>{{ _("<strong>What's possible</strong> if we let go of traditional partnership models in global development?") }}</p>
-        <p>{{ _("Join individuals and lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, facere natus reprehenderit repellat quos pariatur nihil id accusantium corporis laudantium fugiat distinctio consectetur sapiente nostrum veritatis illum omnis non quas!") }}</p>
+        <p>{{ _("Join attendees from across two continents and one hundred organizations at Canada's largest and most exciting development conference! Make this event the highlight of your year by joining us and 700 other passionate leaders, entrepreneurs, and partners.") }}</p>
         <button>{{ _("Sign up now") }}</button>
       </div>
     </div>
@@ -34,11 +34,11 @@
         <li class="jumpdown">
           <ul>
             <li>
-              <img src="{{ url_for('static', filename='img/icon-learn-lead.png') }}" alt="Learn and lead" />
+              <img src="{{ url_for('static', filename='img/icon-learn-lead.png') }}" alt="{{ _('Learn and lead') }}" />
               <p>{{ _("As both delegate and presenter, explore new theories and strategies.") }}</p>
             </li>
             <li>
-              <img src="{{ url_for('static', filename='img/icon-connect.png') }}" alt="Connect" />
+              <img src="{{ url_for('static', filename='img/icon-connect.png') }}" alt="{{ _('Connect') }}" />
               <p>{{ _("To experts, investors, and coalition efforts within and beyond your field.") }}</p>
             </li>
           </ul>
@@ -46,11 +46,11 @@
         <li class="jumpdown">
           <ul>
             <li>
-              <img src="{{ url_for('static', filename='img/icon-develop.png') }}" alt="Develop" />
+              <img src="{{ url_for('static', filename='img/icon-develop.png') }}" alt="{{ _('Develop') }}" />
               <p>{{ _("Practical skills and innovative processes to work in global development.") }}</p>
             </li>
             <li>
-              <img src="{{ url_for('static', filename='img/icon-share.png') }}" alt="Share" />
+              <img src="{{ url_for('static', filename='img/icon-share.png') }}" alt="{{ _('Share') }}" />
               <p>{{ _("Whether yourself or your organization, promote or test your current ideas.") }}</p>
             </li>
           </ul>
@@ -82,12 +82,12 @@
         <li class='hatch ir'>{{ _('Hatch Ltd') }}</li>
         <li class='transcanada ir'>{{ _('TransCanada Corporation') }}</li>
       </ul>
-      <p>{{ _('Engineers Without Borders is looking for more partners. <a href="{{ url_for('sponsors')">Interested?</a>') }}</p>
+      <p>{{ _('Engineers Without Borders is looking for more partners.') }} <a href="{# url_for('sponsors') #}">{{ _('Interested?') }}</a></p>
     </div>
   </main>
 
   <footer>
-    <p>{{ _('For more information, please contact <a href="mailto:someone@example.com?Subject=NC14%20Question">Lorem Ipsum</a>') }}</p>
+    <p>{{ _('For more information, please contact our sponsorship lead,') }} <a href="mailto:amirnosrat@ewb.ca?Subject=NC14%20Question">Amir Nosrat</a></p>
     <small>{{ _('All Rights Reserved, 2013') }}</small>
   </footer>
 
